--- a/css/styles.css
+++ b/css/styles.css
@@ -15,9 +15,11 @@
 }
 body {
   background-color: #FCFFF8;
+  font-family: 'Original Surfer', cursive;
 }
 #destinations{
   border: 1px dotted #337AB7;
   margin: 10px;
   text-align: center;
+  margin-bottom: 60px;
 }
